--- a/_units/09.md
+++ b/_units/09.md
@@ -62,8 +62,6 @@ The chord can easily be explained as a half-diminished seventh chord or as a Fre
 
 Since the time of J.S. Bach, equal-temperament has dominated western classical music.  In this system, every semitone is of equal size in log-frequency (remember that our perception of pitch is logarithmic).  For a given number of semitones, n, we can calculate the frequency from a reference f_r using the formula
 
-{% include img-figure url="/MUTOR/assets/images/unit9_equal-temperament.png" description="Equal Temperament" %}
-
 \begin{equation}
 f_n=f_r(\sqrt[12]{2})^n
 \label{eq:Equal-Temperament}
@@ -93,11 +91,10 @@ An important technique that defines common practice music is the modulation to d
     <audio controls src="/MUTOR/assets/audios/unit9_froberger-capriccioInCmaj.mp3">
       Your browser does not support the audio element.
     </audio>
-    <p>Demo Normal Hearing vs. High-Frequency Hearing loss</p>
   </body>
 </html>
 
-Listening example 1.  The first minute of Capriccio (FbWV 506) by Johann Jakob Froberger played on an organ in a tuning system other than equal temperament.
+Listening example 1. The first minute of Capriccio (FbWV 506) by Johann Jakob Froberger played on an organ in meantone temperament.
 
 <html>
   <head>
@@ -107,10 +104,10 @@ Listening example 1.  The first minute of Capriccio (FbWV 506) by Johann Jakob F
     <audio controls src="/MUTOR/assets/audios/unit9_froberger-capriccioInCmaj-temp.mp3">
       Your browser does not support the audio element.
     </audio>
-    <p>Demo Normal Hearing vs. High-Frequency Hearing loss</p>
   </body>
-</html>Listening example 2.  Froberger's Capriccio played in equal temperament.
+</html>
 
+Listening example 2. Froberger's Capriccio played in equal temperament.
 
 {% include img-figure url="/MUTOR/assets/images/unit9_froberger-capriccioInCmaj.png" description="Froberger Cappriccio C maj" %}
 Figure 2.  Bars 1-12 of Capriccio (FbWV 506) by Johann Jakob Froberger.
@@ -124,18 +121,21 @@ Download the following patches which will allow you to explore different tuning 
 {% include note author="vg" text="There needs to be something more current! " %}
 
 # Period Tunings
-A tuning where all thirds and fifths are just cannot exist mathematically, therefore all tunings such as the following are compromises:
+A tuning where all thirds and fifths are just cannot exist mathematically, therefore all tunings such as the following are compromises. The term _temperament_ (as opposed to _tuning_) refers to the attempt of creating a compromise by either modifying thirds and/or fifths.
 
 - Just-intonation tuning
-- Pythagorean tuning
-- Mean-tone tuning
-- Werckmeister
-- Valotti and many more
+- Pythagorean tuning 
+- Meantone temperament
+- Werckmeister temperament
+- Valotti 
+- and many more
+
+A comprehensive list of tunings and temperaments (currently more than 4600 files) can be found in the [Scala Archive](http://www.huygens-fokker.org/microtonality/scales.html).
+
 
 # Microtonality
 The term microtonality refers to the systematic exploration of tonal relationships that can not be derived from our tempered or quasi-tempered tuning. By comparison with the steps of the 12-tone tempered tuning (also called 12TET = "12-tone equal temperament”), in microtonal tunings deviations are smaller than 100 cents are common. Hence the term microtonality.
 
-[Scala Archive]
 
 In the field microtonality, we can distinguish at least two schools of thought:
 
@@ -152,13 +152,17 @@ Figure 3. Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit 
 The need for small subdivisions of the whole tone into four (quartertone tuning or 24-tone equal temperament [24TET] also known as equal devision of the octave in 24 steps [24EDO]) and six (36TET) was already theorized and practiced at the beginning of the 20th Century by composers such as Busoni, Haba, Wishnegradsky and Ives. The Mexican composer Julian Carrillo had a piano patented in 1940 with a keyboard in 16th notes (96TET)spanning just one octave. The 72-step "ekmelic" tuning closely approximates most of the lower harmonic overtones, 
 
 ### Other Divisions of the Octave
-53TET is derived from the stacking of 53 fifths. 53 fifths correspond to 31 octaves in a very good approximation. 
+53TET is derived from stacking fifths and tempering out the small _schisma_ between 53 fifths and 31st octave. It was known to Chinese scholars in antiquity. 
 
-Tuning systems in which a __diatonic__ pitch set exists are also interesting, such as at 17TET, 19TET (1/3 comma mean-tone tuning), 22TET, 31TET (1/4 comma mean-tone tuning) and 41TET. 
+{% include img-figure url="/MUTOR/assets/images/unit9_53TET-in-Max.png" description="Calculation of 53TET" %}
+Figure 4. Calculation of the 53-step equidistant tuning in Max
+{% include note author="vg" text="Redo in English or create online version" %}
 
-These systems obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the system, and m and n are integers to be multiplied with s by to yield a diatoic whole tone or a semitone, resp. 
+53TET features a __diatonic__ pitch set which also exists in temperaments such as at 17TET, 19TET (1/3 comma mean-tone tuning), 22TET, 31TET (1/4 comma mean-tone tuning) and 41TET. 
 
-This also applies: 5 * m + 2 * n = number of steps in the tuning. 
+These temperaments obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the temperament, and m and n are integers to be multiplied with s by to yield a diatoic whole tone or a semitone, resp. 
+
+This also applies: 5 * m + 2 * n = number of steps in the temperament. 
 
 The following condition should also be fulfilled: 694 cents < (3 * m + n) * s < 710 cents.
 
@@ -170,15 +174,11 @@ For 22TET: m = 4 and n = 1,
 For 31TET: m = 5 and n = 3,
 For 41TET: m = 7 and n = 3.
 
-
-{% include img-figure url="/MUTOR/assets/images/unit9_53TET-in-Max.png" description="Calculation of 53TET" %}
-Figure 4. Calculation of the 53-step equidistant tuning in Max
-
 ### Divisions of Other Intervals 
 The octave is a particular interval that creates a sense of unity with other other members of the same pitch class. In addition to the octave, of course, other intervals can be divided. Intervals that have been used extensively for this purpose are the just fifth (3/2) and the just twelfth (3/1), the latter bearing a close similarity to the octave. Examples are the scales (alpha, beta, gamma and delta) invented by microtonal composer Wendy Carlos and the Bohlen-Pierce scale.
 
 #### Bohlen-Pierce Scale
-The Bohlen-Pierce scale, first discovered and described in 1978 by engineer Heinz Bohlen divides the just twelfth into thirteen steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without two (3,5,7 pitch lattice).
+The Bohlen-Pierce scale, first discovered and described in 1978 by engineer Heinz Bohlen divides the just twelfth into thirteen steps. The just version of the scale has a pitch set entirely made up of odd integer frequency ratios such as 5/3, 7/5, 7/3, 9/7 and 9/5. Some people also refer to this as 7-limit just intonation without 2 (3,5,7 pitch lattice).
 
 These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? http://www.sfoxclarinets.com/bpclar.html. The equal tempered version of the scale is a  matches the just one much more closely than the 5-limit just and equal tempered versions of the chromatic scale. 
 
@@ -193,10 +193,8 @@ Another classes of tunings can not be classified into one group or the other. Th
 (The other scale commonly used in gamelan music, Slendro, is characterized by a quasi-equidistant 5-tone scale.)
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan_Dissonance_Curve.png" description="Dissonance Curve for a Gamelan instrument" %}
-Figure 1. Dissonance Curve for a Gamelan instrument
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.png" description="A Gamelan orchestra" %}
-Figure 1. Gamelan Orchestra
 
 # Harmony in the 20th/21st Centuries
 
@@ -204,26 +202,46 @@ Figure 1. Gamelan Orchestra
 
 The progression of harmony from consonance through dissonance and back to consonance can be abstracted and seen as a buildup of tension and a release of that tension.  The serialist composers of the post-war period (Boulez, Stockhausen, etc.) gave up the ability to create tension and release through harmonic progression as they abandoned the sonorities and harmonic syntax of the past.  The generation to follow (Grisey, Murail, Saariaho) sought new ways of creating tension and release without returning to the rules of the past.  In her article Timbre and harmony: interpolations of timbral structures, Kaija Saariao proposes a "sound / noise axis" that could replace the tonal system of consonance / dissonance as a way of creating tension and release.  This is hear clearly in the opening seconds of her composition Nymphea for string quartet and electronics—here, the performers alternate between normal playing and noisy extended techniques such as playing on the bridge (listening example 3).  
 
-saariaho-nymphea-beg.mp3 
-Listening example 3.  The opening minute of Kaija Saariaho's Nymphea for string quartet and electronics.
+ 
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_saariaho-nymphea-beg.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+
+Listening example 3. The opening minute of Kaija Saariaho's Nymphea for string quartet and electronics.
 
 [PAGE FROM SCORE HERE]
 
-In works such as Gérard Grisey's Partiels and Tristan Murail's Gondwana, the composers create a relationship between harmonicity and inharmonicity.  In this case, the concept of harmonicity refers to similarity to the harmonic series.  In Partiels, the opening sonority—a harmonic series derived from the acoustical analysis of a bass trombone—is gradually transformed into an increasingly inharmonic sonority by gradually placing the highest pitches into lower octaves.  In figure xx, the top graph is a sonogram of the opening 2'30" of Partiels and the bottom is a plot of the roughness (see the unit on consonance and dissonance) of the sonority over time created using a modified version of Richard Parncutt's algorithm.  
+In works such as Gérard Grisey's Partiels and Tristan Murail's Gondwana, the composers create a relationship between harmonicity and inharmonicity.  In this case, the concept of harmonicity refers to similarity to the harmonic series.  In Partiels, the opening sonority - a harmonic series derived from the acoustical analysis of a bass trombone - is gradually transformed into an increasingly inharmonic sonority by gradually placing the highest pitches into lower octaves.  In figure xx, the top graph is a sonogram of the opening 2'30" of Partiels and the bottom is a plot of the roughness (see the unit on consonance and dissonance) of the sonority over time created using a modified version of Richard Parncutt's algorithm.  
 
-partials1-roughness.png
-Figure 3.  The top plot is a sonogram of the first 3'40" of Grisey's Partiels and the bottom plot is roughness against time.
 
-Partiels_first-section.mp3 
-Listening example 4.  The first 3'40" of Grisey's Partiels.
+{% include img-figure url="/MUTOR/assets/images/unit9_partials1-roughness.png" description="The top plot is a sonogram of the first 3'40" of Grisey's Partiels and the bottom plot is roughness against time." %}
+
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit9_Partiels_first-section.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html> 
+Listening example 4. The first 3'40" of Grisey's Partiels.
 
 Although Grisey uses a very different system of harmony in Partiels, one can still see a constant transition between consonance and dissonance or tension and release.  About this issue, the composer writes in his own words:
 
-	Two traits characterize the development of sounds:  periodicity and the overtone spectrum.  These elements, which are very easy to identify, 	give the piece continuity and a dynamic that corresponds rather closely to the cyclical form of human respiration:  inhalation, exhalation and 	rest or tension / collapse — relaxation — collection of energy.
+> Two traits characterize the development of sounds:  periodicity and the overtone spectrum. These elements, which are very easy to identify, give the piece continuity and a dynamic that corresponds rather closely to the cyclical form of human respiration: inhalation, exhalation and rest or tension / collapse — relaxation — collection of energy.
 
 In the following demo, the roughness of a sound file can be calculated in realtime.  Download the first section of Partiels here (Partiels_first-section.aiff) to watch and listen to it in realtime.
 
-roughness-max-screenshot.png
+{% include img-figure url="/MUTOR/assets/images/roughness-max-screenshot.png" description="Roughness" %}
 
 [A BETTER PATCH IS COMING SOON]
 
