--- a/_units/09.md
+++ b/_units/09.md
@@ -221,7 +221,7 @@ Listening example 3. The opening minute of Kaija Saariaho's Nymphea for string q
 In works such as Gérard Grisey's Partiels and Tristan Murail's Gondwana, the composers create a relationship between harmonicity and inharmonicity.  In this case, the concept of harmonicity refers to similarity to the harmonic series.  In Partiels, the opening sonority - a harmonic series derived from the acoustical analysis of a bass trombone - is gradually transformed into an increasingly inharmonic sonority by gradually placing the highest pitches into lower octaves.  In figure xx, the top graph is a sonogram of the opening 2'30" of Partiels and the bottom is a plot of the roughness (see the unit on consonance and dissonance) of the sonority over time created using a modified version of Richard Parncutt's algorithm.  
 
 
-{% include img-figure url="/MUTOR/assets/images/unit9_partials1-roughness.png" description="The top plot is a sonogram of the first 3'40" of Grisey's Partiels and the bottom plot is roughness against time." %}
+{% include img-figure url="/MUTOR/assets/images/unit9_partials1-roughness.png" description="The top plot is a sonogram of the first 3'40&quot; of Grisey's Partiels and the bottom plot is roughness against time." %}
 
 <html>
   <head>
