--- a/_units/09.md
+++ b/_units/09.md
@@ -235,13 +235,13 @@ In works such as Gérard Grisey's Partiels and Tristan Murail's Gondwana, the co
 </html> 
 Listening example 4. The first 3'40" of Grisey's Partiels.
 
-Although Grisey uses a very different system of harmony in Partiels, one can still see a constant transition between consonance and dissonance or tension and release.  About this issue, the composer writes in his own words:
+Although Grisey uses a very different system of harmony in Partiels, one can still see a constant transition between consonance and dissonance or tension and release. About this issue, the composer writes in his own words:
 
 > Two traits characterize the development of sounds:  periodicity and the overtone spectrum. These elements, which are very easy to identify, give the piece continuity and a dynamic that corresponds rather closely to the cyclical form of human respiration: inhalation, exhalation and rest or tension / collapse — relaxation — collection of energy.
 
 In the following demo, the roughness of a sound file can be calculated in realtime.  Download the first section of Partiels here (Partiels_first-section.aiff) to watch and listen to it in realtime.
-
-{% include img-figure url="/MUTOR/assets/images/roughness-max-screenshot.png" description="Roughness" %}
+{% include note author="vg" text="This needs to be redone" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_roughness-max-screenshot.png" description="Roughness" %}
 
 [A BETTER PATCH IS COMING SOON]
 
@@ -249,12 +249,13 @@ In the following demo, the roughness of a sound file can be calculated in realti
 
 The opening section of Partiels raises an interesting question:  is there a difference between a chord and a timbre?  In this case, it would seem that Grisey constructed a chord out of the elements of a timbre.  But, if a timbre is made up of a series of pitches, how is it different from a chord?  In most western classical music prior to the 20th century, harmony and timbre were considered two separate elements—the orchestration of a sonority could be done in many different ways and was often considered a subjective, surface-level detail.  However, in the 20th century, composers such as Olivier Messiaen began to think of timbre and harmony as inseparable, and it is likely that Grisey would refer to the opening sonority of Partiels as a timbre rather than a chord.  
 
-A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.  In the past, harmonic change and movement to new key areas was largely a discrete event, however, here, by only changing a few notes at a time by placing them in different octaves, Grisey creates a smooth transformation from one sonority to another.  Recently, David Wessel has developed a Max/MSP (http://www.cycling74.com) object that facilitates gradual timbral transformation.  Here, a timbre is created using a large bank of sinusoidal oscillators and a gradual transformation to a new timbre is done by changing the frequency of one oscillator at a time.  Download the following patch to experiment with different timbral transformations.
+A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.  In the past, harmonic change and movement to new key areas was largely a discrete event, however, here, by only changing a few notes at a time by placing them in different octaves, Grisey creates a smooth transformation from one sonority to another.  David Wessel has developed a Max (http://www.cycling74.com) object that facilitates gradual timbral transformation.  Here, a timbre is created using a large bank of sinusoidal oscillators and a gradual transformation to a new timbre is done by changing the frequency of one oscillator at a time.  Download the following patch to experiment with different timbral transformations.
 
 
 [NOTE--THIS IS A SCREENSHOT OF THE HELP PATCH.  A REAL DEMO IS COMING ASAP]
 
-migrator-ss.png 
+{% include img-figure url="/MUTOR/assets/images/unit9_migrator-ss.png" description="Roughness" %}
+
 
 # References
 
