--- a/_units/09.md
+++ b/_units/09.md
@@ -182,11 +182,12 @@ The Bohlen-Pierce scale, first discovered and described in 1978 by engineer Hein
 
 These intervals are also included in the spectrum of the clarinet, which is one of the few wind instruments that blow over at the twelfth. What could be more appropriate than developing a clarinet with the Bohlen-Pierce tuning? http://www.sfoxclarinets.com/bpclar.html. The equal tempered version of the scale is a  matches the just one much more closely than the 5-limit just and equal tempered versions of the chromatic scale. 
 
-Figure 1. BP Scale
+{% include img-figure url="/MUTOR/assets/images/unit9_BP-Scale_DifferentViews.png" description="Different representations of the Bohlen-Pierce scale" %}
 
-Figure 1. BP Soprano Clarinet
+{% include img-figure url="/MUTOR/assets/images/unit9_clarinets.png" description="Bohlen-Pierce clarinets in three sizes" %}
 
 ##### Bohlen-Pierce Microtonality
+As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is often referred to as a macrotonal scale, implying that the step size is larger than a semitone. But just like semitones of the chromatic scale, the Bohlen-Pierce scale can also be devided into smaller steps. Two microtonal scales have gained notoriety: The Bohlen-Pierce triple scale dividing the BP step into 3 and the Bohlen-Pierce quintuple scale dividing it into 5. Serendipitously, the resulting step size (1902 / 65 = 29.262 cents) is all but identical to 41TET (1200 / 41 = 29.268 cents). We can therefore claim that the Bohlen-Pierce is a subset of 41TET. This fact has far-reaching implications which have hardly been explored by composers and theorists.
 
 ## Other Scales
 Another classes of tunings can not be classified into one group or the other. This includes the Indonesian pelog (gamelan music), which has a set of 5 small and 2 large unequal intervals, of which only 5 are used in traditional Gamelan music. According to William Sethares these instruments are tuned in such way that overall sensory dissonance of the mainly inharmonic sounds of the Gamelan orchestra reaches a minimum. Another way to smooth out the unpleasantness of the inharmonic sounds is the pair-wise performance of instruments tuned to slightly divergent pitch which creates vibrato-like beatings.
