--- a/_units/09.md
+++ b/_units/09.md
@@ -186,6 +186,9 @@ These intervals are also included in the spectrum of the clarinet, which is one 
 
 {% include img-figure url="/MUTOR/assets/images/unit9_clarinets.png" description="Bohlen-Pierce clarinets in three sizes" %}
 
+{% include note author="vg" text="Include Example: Burning Petrol" %}
+
+
 ##### Bohlen-Pierce Microtonality
 As the equal-tempered step size of the Bohlen-Pierce scale is 146.3 cents, it is often referred to as a macrotonal scale, implying that the step size is larger than a semitone. But just like semitones of the chromatic scale, the Bohlen-Pierce scale can also be devided into smaller steps. Two microtonal scales have gained notoriety: The Bohlen-Pierce triple scale dividing the BP step into 3 and the Bohlen-Pierce quintuple scale dividing it into 5. Serendipitously, the resulting step size (1902 / 65 = 29.262 cents) is all but identical to 41TET (1200 / 41 = 29.268 cents). We can therefore claim that the Bohlen-Pierce is a subset of 41TET. This fact has far-reaching implications which have hardly been explored by composers and theorists.
 
