--- a/_units/09.md
+++ b/_units/09.md
@@ -10,7 +10,7 @@ summary: brief summary of the unit
 authors: 
  - Georg Hajdu
  - John MacCallum
-topics: [Scale, harmony, microtonality]
+topics: [Scale, Harmony, Microtonality, Inharmonicity, Roughness]
 test_questions:
  - How does temperament affect harmony and harmonic progression?
  - Describe the differences and similarities between harmony and timbre.
@@ -200,6 +200,9 @@ Another classes of tunings can not be classified into one group or the other. Th
 
 {% include img-figure url="/MUTOR/assets/images/unit9_Gamelan-Orchestra.png" description="A Gamelan orchestra" %}
 
+# Tuning, Timbre, Spectrum, Scale
+{% include note author="vg" text="more..." %}
+
 # Harmony in the 20th/21st Centuries
 
 ## Tension and Release
@@ -249,7 +252,7 @@ In the following demo, the roughness of a sound file can be calculated in realti
 
 [A BETTER PATCH IS COMING SOON]
 
-# Harmony, Timbre and Transformation
+## Harmony, Timbre and Transformation
 
 The opening section of Partiels raises an interesting question:  is there a difference between a chord and a timbre?  In this case, it would seem that Grisey constructed a chord out of the elements of a timbre.  But, if a timbre is made up of a series of pitches, how is it different from a chord?  In most western classical music prior to the 20th century, harmony and timbre were considered two separate elements—the orchestration of a sonority could be done in many different ways and was often considered a subjective, surface-level detail.  However, in the 20th century, composers such as Olivier Messiaen began to think of timbre and harmony as inseparable, and it is likely that Grisey would refer to the opening sonority of Partiels as a timbre rather than a chord.  
 
@@ -259,7 +262,6 @@ A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.
 [NOTE--THIS IS A SCREENSHOT OF THE HELP PATCH.  A REAL DEMO IS COMING ASAP]
 
 {% include img-figure url="/MUTOR/assets/images/unit9_migrator-ss.png" description="Roughness" %}
-
 
 # References
 
