--- a/_units/09.md
+++ b/_units/09.md
@@ -81,7 +81,7 @@ and in just intonation,
 55\cdot(\frac{3}{2}) = 82.5
 \end{equation}
 
-An important technique that defines common practice music is the modulation to distant keys.  As the harmony moves away from the home key, tension increases, however, in a tuning system where the tonic key is tuned near just intonation and the degree to which a key is out of tune increases with the distance from the home key, modulation to distant keys results in a higher level of tension.  In the following listening example, you will hear the first minute of a Capriccio (FbWV 506) by Johann Jakob Froberger (1616-1667) played by Gustav Leonhardt on a harpsichord tuned to Baroque pitch and in a tuning other than equal temperament (most likely meantone temperament).  In the second listening example, you will hear the same passage, but played on a piano in equal temperament.  Pay special attention to bars 7 and 8.
+An important technique that defines common practice music is the modulation to distant keys.  As the harmony moves away from the home key, tension increases, however, in a tuning system where the tonic key is tuned near just intonation and the degree to which a key is out of tune increases with the distance from the home key, modulation to distant keys results in a higher level of tension.  In the following listening example, you will hear the first minute of a Capriccio (FbWV 506) by Johann Jakob Froberger (1616-1667) played on an organ tuned to meantone temperament). In the second listening example, you will hear the same passage, but played in equal temperament.
 
 <html>
   <head>
