--- a/_units/09.md
+++ b/_units/09.md
@@ -29,8 +29,8 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Introduction
-Webster's dictionary defines harmony as
-*
+Webster's dictionary defines 
+* harmony as:
 1. the combination of simultaneous musical notes in a chord 
 1. the structure of music with respect to the composition and progression of chords 
 1. the science of the structure, relation, and progression of chords
@@ -50,13 +50,15 @@ The distinction between harmony and harmonic progression is an important one.  C
 
 Figure 1.  C major triad.
 
-In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound unstable as if it should move to F.  As we can see, the context in which a chord appears is important.  Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 2).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
+In the key of C major, this chord has a feeling of stability since it is the tonic of the key.  However, in the key of F major, the same chord will sound less stable as if it should move to F.  As we can see, the context in which a chord appears is important.  Another example is the famous "Tristan chord"—the opening harmony of Richard Wagner's opera Tristan und Isolde (figure 9.3).  The nature of this sonority has been debated for decades, but the debate centers less around the chord itself, and more around the function and way in which it resolves.
 
 {% include img-figure url="/MUTOR/assets/images/unit9_tristan.png" description="Tristan Prelude" %}
 
 Wagner_Tristan_opening.midi 
 
-The chord can easily be explained as a half-diminished seventh chord or as a French augmented 6th chord where the G# is an appoggiatura  to the A, however, the way in which it resolves does not support either of these labels.
+The chord can easily be explained as a half-diminished seventh chord or as a French augmented 6th chord where the G# is an appoggiatura  to the A, however, the way in which it resolves calls these labels into question.
+
+# Ambiguity
 
 # Tuning and Temperament
 
