--- a/_units/09.md
+++ b/_units/09.md
@@ -29,12 +29,11 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Introduction
-Webster's dictionary defines 
-* harmony as:
-1. the combination of simultaneous musical notes in a chord 
-1. the structure of music with respect to the composition and progression of chords 
-1. the science of the structure, relation, and progression of chords
-+ pleasing or congruent arrangement of parts
+Webster's dictionary defines harmony as:
+1. a. the combination of simultaneous musical notes in a chord 
+1. b. the structure of music with respect to the composition and progression of chords 
+1. c. the science of the structure, relation, and progression of chords
+2. pleasing or congruent arrangement of parts
 
 http://www.m-w.com
 
