--- a/_units/09.md
+++ b/_units/09.md
@@ -149,7 +149,7 @@ Representatives of this movement, which American composer Harry Partch ("Genesis
 
 Figure 3. Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit just intonation.
 
-## Equal Temperament 
+## Equal Divisions 
 ### Divisions of the Whole Tone
 The need for small subdivisions of the whole tone into four (quartertone tuning or 24-tone equal temperament [24TET] also known as equal devision of the octave in 24 steps [24EDO]) and six (36TET) was already theorized and practiced at the beginning of the 20th Century by composers such as Busoni, Haba, Wishnegradsky and Ives. The Mexican composer Julian Carrillo had a piano patented in 1940 with a keyboard in 16th notes (96TET)spanning just one octave. The 72-step "ekmelic" tuning closely approximates most of the lower harmonic overtones, 
 
